# AETHERIS

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements.txt  shared_memory.py  unified_pipeline.py
analysis/: __init__.py  ablation_studio.py  abliteration_studio.py  activation_probe.py  adversarial_robustness.py  alignment_imprint.py  attribution_patching.py  capability_entanglement.py  causal_trace.py  concept_cone.py  cross_layer.py  defense_robustness.py  distributed_alignment.py  emergent_behavior.py  expert_decomposition.py  faithfulness.py  linear_probe.py  logit_lens.py  mechanistic_interpretability.py  multi_token.py  representation_engineering.py  representation_geometry.py  residual_decomp.py  sparse_surgery.py  spectral_analysis.py  temporal_dynamics.py  universality.py
cli/: __init__.py  main.py
cloud/: __init__.py  colab.py  hybrid.py  kaggle.py  lightning.py  runpod.py  spaces.py  spaces_deploy_oneclick.py  vast.py
core/: __init__.py  extractor.py  geometry.py  ouroboros.py  projector.py  steered.py  validation.py
data/: __init__.py  models.py  models_popular.py  presets.py  prompts.py
docs/: api_reference.md  architecture.md  index.md  installation.md  quickstart.md
examples/: 01_basic_analysis.py  02_free_tinyllama.py  03_cloud_obliteration.py  04_map_barrier.py  05_self_optimize.py
integration/: __init__.py  aeon_logger.py  cicide_bridge.py  manifest_updater.py  pantheon_orchestrator.py  research_pipeline.py
interface/: __init__.py  api.py  gesture.py  gradio_app.py  holographic.py  neural.py  voice.py  web.py
models/: __init__.py  caching.py  hub_integration.py  quantization.py  registry.py
novel/: __init__.py  activation_winsor.py  barrier_mapper.py  cot_aware.py  (+13 more)
(+51 files in other folders)
