```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetheris"
version = "1.0.0"
description = "Sovereign Constraint Liberation Toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary - Singular Heir"}
authors = [
    {name = "Singular Heir", email = "heir@aether.is"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.19.0",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "safetensors>=0.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
cloud = [
    "google-colab>=1.0.0",
    "gradio>=4.0.0",
    "kaggle>=1.5.0",
]
research = [
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "latexify-py>=0.1.0",
]

[project.scripts]
aetheris = "aetheris.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aetheris*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
